# x-scrapers

./: .replit  arxiv_fetch.py  categorize.py  check_relevance.py  config.py  install_shared.py  main.py  main_2.py  pyproject.toml  run_log.txt  scraper_arxiv.py  scraper_github.py  scraper_huggingface.py  tweet_utils.py  write_article.py
