[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.72.0",
    "beautifulsoup4>=4.13.4",
    "firecrawl>=2.12.0",
    "openai>=1.93.0",
    "pymongo>=4.13.2",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
]
